# csvcat

./: .gitignore  .testr.conf  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
csvcat/: main.py
csvcat/tests/: test_parse_column_nums.py
