[metadata]
name = csvcat
summary = Concatenate comma separated value files
description-file =
    README.rst
author = Doug hellmann
author-email = doug@doughellmann.com
home-page = https://github.com/dhellmann/csvcat
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Database
    Topic :: Office/Business
    Topic :: Utilities

[files]
packages =
    csvcat

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True
